typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames2_ES5.ts.stderr
error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            165,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames2_ES5.ts:7:9
  |
7 |     get [accessorName]() { }
  |         ^^^^^^^^^^^^^^

error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            219,
        ),
        hi: BytePos(
            233,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames2_ES5.ts:9:16
  |
9 |     static get [accessorName]() { }
  |                ^^^^^^^^^^^^^^

